@@ -1,4 +1,6 @@
 * Improvement: Support `has_one` relationships
+* Improvement: Support `has_many :through` associations
+  with a custom `source` option.
 * Improvement: Support `has_many` associations
   with a custom `class_name` option.
 * Change: use field classes for `attribute_types` instead of symbols.
